--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+XEEnglish.xcodeproj/project.xcworkspace/xcuserdata/houjing.xcuserdatad/UserInterfaceState.xcuserstate
+
 .DS_Store
 .DS_Store?
 
