--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ DerivedData
 XEEnglish.xcodeproj/project.xcworkspace/xcuserdata/houjing.xcuserdatad/UserInterfaceState.xcuserstate
 
 .DS_Store
+*.DS_Store
 .DS_Store?
 
 # CocoaPods
