[lx]微信支付成功

--- a/XEEnglish/Info.plist
+++ b/XEEnglish/Info.plist
@@ -21,6 +21,10 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>wx462f32e9fd23eecb</string>
